fix nome do grupo + add dependencia que faltava para tratar tipos java.time.LocalTime e java.time.LocalDate

--- a/gestaohorarios/pom.xml
+++ b/gestaohorarios/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.0.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>pt.iscte-iul</groupId>
+	<groupId>pt.iscteiul</groupId>
 	<artifactId>gestaohorarios</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Gestao de Horarios</name>
@@ -37,6 +37,10 @@
             <artifactId>opencsv</artifactId>
             <version>5.7.1</version>
         </dependency>
+        <dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
