--- a/gestaohorarios/pom.xml
+++ b/gestaohorarios/pom.xml
@@ -37,6 +37,10 @@
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+		<dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-csv</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
