--- a/gestaohorarios/pom.xml
+++ b/gestaohorarios/pom.xml
@@ -29,6 +29,12 @@
 		</dependency>
 		
 		<dependency>
+   			<groupId>org.springframework</groupId>
+    		<artifactId>spring-test</artifactId>
+		</dependency>
+
+		
+		<dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>5.7.1</version>
