--- a/gestaohorarios/pom.xml
+++ b/gestaohorarios/pom.xml
@@ -47,6 +47,10 @@
         <groupId>com.fasterxml.jackson.dataformat</groupId>
         <artifactId>jackson-dataformat-csv</artifactId>
         </dependency>
+        <dependency>
+    	<groupId>org.junit.platform</groupId>
+    	<artifactId>junit-platform-suite-engine</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
