--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -10,9 +10,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "git-actions" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "git-actions" ]
 
 jobs:
   build:
