--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -34,5 +34,6 @@ jobs:
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
       with:
-          run: mvn -B package --file gestaohorarios/pom.xml
+          directory: ./gestaohorarios
+          token: ${{ secrets.GITHUB_TOKEN }}
       
