--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -31,3 +31,5 @@ jobs:
       run: mvn -B package --file gestaohorarios/pom.xml
     - name: javadoc with Maven
       run: mvn -B package --file gestaohorarios/pom.xml
+    - name: Run Junit tests
+      run: mvn -B test -Dtest=gestaohorarios/src/test/java/tests/AllTests.java --file gestaohorarios/pom.xml
