--- a/gestaohorarios-frontend/package.json
+++ b/gestaohorarios-frontend/package.json
@@ -5,15 +5,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.6",
     "@fullcalendar/interaction": "^6.1.5",
-    "@fullcalendar/react": "^6.1.5",
+    "@fullcalendar/react": "^6.1.6",
     "@fullcalendar/timegrid": "^6.1.5",
     "@mui/material": "^5.11.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "csvtojson": "^2.0.10",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
@@ -23,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "nodemon --exec 'npm run start-original'",
+    "start": "nodemon --exec npm run start-original",
     "start-original": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
