correcao problemas p/ correr app

--- a/gestaohorarios-frontend/package.json
+++ b/gestaohorarios-frontend/package.json
@@ -23,7 +23,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "nodemon --exec 'npm run start-original'",
+    "start": "nodemon --exec \"npm run start-original\"",
     "start-original": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
