--- a/gestaohorarios-frontend/package.json
+++ b/gestaohorarios-frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@fullcalendar/daygrid": "^6.1.5",
     "@fullcalendar/interaction": "^6.1.5",
+    "@fullcalendar/list": "^6.1.6",
     "@fullcalendar/react": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
     "@mui/material": "^5.11.16",
@@ -14,6 +15,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "d3-dsv": "^3.0.1",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
