--- a/gestaohorarios-frontend/package.json
+++ b/gestaohorarios-frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "csv-parse": "^5.3.9",
     "d3-dsv": "^3.0.1",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
