--- a/gestaohorarios-frontend/package.json
+++ b/gestaohorarios-frontend/package.json
@@ -7,8 +7,10 @@
     "@emotion/styled": "^11.10.6",
     "@fullcalendar/core": "^6.1.6",
     "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/icalendar": "^6.1.6",
     "@fullcalendar/interaction": "^6.1.5",
     "@fullcalendar/list": "^6.1.6",
+    "@fullcalendar/moment": "^6.1.6",
     "@fullcalendar/multimonth": "^6.1.6",
     "@fullcalendar/react": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
@@ -21,6 +23,7 @@
     "d3-dsv": "^3.0.1",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
